TerraBACKUP.tf
provider "aws" {
  region = var.aws_region
}

/*
#Create security group with firewall rules
resource "aws_security_group" "my_security_group" {
  name        = var.security_group
  description = "security group for Ec2 instance"

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  ingress {
    from_port   = 4444
    to_port     = 4444
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  ingress {
    from_port   = 4442
    to_port     = 4443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }


 ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

 # outbound from jenkis server
  egress {
    from_port   = 0
    to_port     = 65535
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags= {
    Name = var.tag_name
  }
}

*/

resource "aws_network_interface" "jenkins_eni" {
  subnet_id       = var.subnet_id
  security_groups = [var.security_group]

  attachment {
    instance     = aws_instance.myFirstInstance.id
    device_index = 1
  }
}

# Create AWS ec2 instance
resource "aws_instance" "myFirstInstance" {
  ami           = var.ami_id
  key_name = var.key_name
  instance_type = var.instance_type
//  subnet_id = var.subnet_id
//  security_groups= [var.security_group]
 // network_interface_id= var.eni_id
//  vpc_security_group_ids= [var.security_group]
  tags= {
    Name = var.tag_name
  }
}

resource "aws_eip_association" "eip_assoc" {
  instance_id   = aws_instance.myFirstInstance.id
  network_interface_id = aws_network_interface.jenkins_eni.id
  public_ip = var.public
}


/*
# Create Elastic IP address
resource "aws_eip" "myFirstInstance" {
  vpc      = true
  instance = aws_instance.myFirstInstance.id
tags= {
    Name = var.eip
  }
}
*/
